# Analysis-Utilities

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  analysis-utilities.pc.in  flake.nix  setup-hook.sh
.githooks/: pre-commit
gpu/: .clangd  RooHighExpTail.cu  RooLowExpTail.cu  RooLowLinTail.cu  RooStepShelf.cu
include/: BinaryUtils.hpp  FittingUtils.hpp  IOUtils.hpp  InitUtils.hpp  InteractiveEditorX11Guard.hpp  InteractiveFitEditor.hpp  InteractiveRooFitEditor.hpp  InteractiveSimultaneousFitEditor.hpp  LinkDef.h  PlottingUtils.hpp  RooFitPhotopeakKernels.hpp  RooFitPhotopeakPdfs.hpp  RooFitUtils.hpp  WaveformProcessingUtils.hpp
python/: pyproject.toml
python/analysis_utilities/: __init__.py  init_utils.py  io.py
python/analysis_utilities/tests/: test_init_utils.py  test_io.py
src/: BinaryUtils.cpp  FittingUtils.cpp  IOUtils.cpp  InitUtils.cpp  InteractiveFitEditor.cpp  InteractiveRooFitEditor.cpp  InteractiveSimultaneousFitEditor.cpp  PlottingUtils.cpp  RooFitPhotopeakPdfs.cpp  RooFitUtils.cpp  WaveformProcessingUtils.cpp
templates/python/: flake.nix
templates/standard/: Makefile  flake.nix
