[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "analysis-utilities"
version = "@VERSION@"
description = "Python utilities for nuclear measurement analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
